--- a/css/waffle.less
+++ b/css/waffle.less
@@ -1,3 +1,6 @@
+@minus: 0.001;
+
+@size0: 0em;
 @size1: 40em;
 @size2: 80em;
 @size3: 120em;
@@ -5,26 +8,18 @@
 @size5: 240em;
 @size6: 480em;
 
+@zs-min: @size0;
+@zs-max: (@size1 - @minus);
 @xs-min: @size1;
-@xs-max: (@size2 - 0);
+@xs-max: (@size2 - @minus);
 @sm-min: @size2;
-@sm-max: (@size3 - 0);
+@sm-max: (@size3 - @minus);
 @md-min: @size3;
-@md-max: (@size4 - 0);
+@md-max: (@size4 - @minus);
 @lg-min: @size4;
-@lg-max: (@size5 - 0);
+@lg-max: (@size5 - @minus);
 @xl-min: @size5;
-@xl-max: (@size6 - 0);
-//@xs-min: @size1;
-//@xs-max: (@size2 - 1);
-//@sm-min: @size2;
-//@sm-max: (@size3 - 1);
-//@md-min: @size3;
-//@md-max: (@size4 - 1);
-//@lg-min: @size4;
-//@lg-max: (@size5 - 1);
-//@xl-min: @size5;
-//@xl-max: (@size6 - 0);
+@xl-max: (@size6);
 
 .clearfix {
   content: '.';
@@ -41,159 +36,161 @@
   }
 }
 
-.make-col (@size, @direction: left) {
+.col (@size, @direction: left) {
   float: @direction;
   width: percentage(@size / 12);
 }
 
-.make-col-xs (@size, @direction: left) {
+.col-zs (@size, @direction: left) {
+  @media all and (min-width: @zs-min) and (max-width: @zs-max) {
+    .col(@size);
+  }
+}
+
+.col-xs (@size, @direction: left) {
   @media all and (min-width: @xs-min) and (max-width: @xs-max) {
-    .make-col(@size);
+    .col(@size);
   }
 }
 
-.make-col-sm (@size, @direction: left) {
+.col-sm (@size, @direction: left) {
   @media all and (min-width: @sm-min) and (max-width: @sm-max) {
-    .make-col(@size);
+    .col(@size);
   }
 }
 
-.make-col-md (@size, @direction: left) {
+.col-md (@size, @direction: left) {
   @media all and (min-width: @md-min) and (max-width: @md-max) {
-    .make-col(@size);
+    .col(@size);
   }
 }
 
-.make-col-lg (@size, @direction: left) {
+.col-lg (@size, @direction: left) {
   @media all and (min-width: @lg-min) and (max-width: @lg-max) {
-    .make-col(@size);
+    .col(@size);
   }
 }
 
-.make-col-xl (@size, @direction: left) {
+.col-xl (@size, @direction: left) {
   @media all and (min-width: @xl-min) and (max-width: @xl-max) {
-    .make-col(@size);
+    .col(@size);
   }
 }
 
-.make-wrap (@size) {
+.wrap (@size) {
   & > *:nth-child(@{size}n + 1) {
     clear: both;
   }
 }
 
-.make-wrap-xs (@size, @direction: left) {
+.wrap-zs (@size, @direction: left) {
+  @media all and (min-width: @zs-min) and (max-width: @zs-max) {
+    .wrap(@size);
+  }
+}
+
+.wrap-xs (@size, @direction: left) {
   @media all and (min-width: @xs-min) and (max-width: @xs-max) {
-    .make-wrap(@size);
+    .wrap(@size);
   }
 }
 
-.make-wrap-sm (@size, @direction: left) {
+.wrap-sm (@size, @direction: left) {
   @media all and (min-width: @sm-min) and (max-width: @sm-max) {
-    .make-wrap(@size);
+    .wrap(@size);
   }
 }
 
-.make-wrap-md (@size, @direction: left) {
+.wrap-md (@size, @direction: left) {
   @media all and (min-width: @md-min) and (max-width: @md-max) {
-    .make-wrap(@size);
+    .wrap(@size);
   }
 }
 
-.make-wrap-lg (@size, @direction: left) {
+.wrap-lg (@size, @direction: left) {
   @media all and (min-width: @lg-min) and (max-width: @lg-max) {
-    .make-wrap(@size);
+    .wrap(@size);
   }
 }
 
-.make-wrap-xl (@size, @direction: left) {
+.wrap-xl (@size, @direction: left) {
   @media all and (min-width: @xl-min) and (max-width: @xl-max) {
-    .make-wrap(@size);
+    .wrap(@size);
   }
 }
 
-.make-hide {
+.hide {
   display: none;
 }
 
-.make-hide-xs {
+.hide-zs {
+  @media all and (min-width: @zs-min) and (max-width: @zs-max) {
+    .hide;
+  }
+}
+
+.hide-xs {
   @media all and (min-width: @xs-min) and (max-width: @xs-max) {
-    .make-hide;
+    .hide;
   }
 }
 
-.make-hide-sm {
+.hide-sm {
   @media all and (min-width: @sm-min) and (max-width: @sm-max) {
-    .make-hide;
+    .hide;
   }
 }
 
-.make-hide-md {
+.hide-md {
   @media all and (min-width: @md-min) and (max-width: @md-max) {
-    .make-hide;
+    .hide;
   }
 }
 
-.make-hide-lg {
+.hide-lg {
   @media all and (min-width: @lg-min) and (max-width: @lg-max) {
-    .make-hide;
+    .hide;
   }
 }
 
-.make-hide-xl {
+.hide-xl {
   @media all and (min-width: @xl-min) and (max-width: @xl-max) {
-    .make-hide;
+    .hide;
   }
 }
 
-.make-show-xs {
+.show-zs {
+  @media not all and (min-width: @zs-min) and (max-width: @zs-max) {
+    .hide;
+  }
+}
+
+.show-xs {
   @media not all and (min-width: @xs-min) and (max-width: @xs-max) {
-    .make-hide;
+    .hide;
   }
 }
 
-.make-show-sm {
+.show-sm {
   @media not all and (min-width: @sm-min) and (max-width: @sm-max) {
-    .make-hide;
+    .hide;
   }
 }
 
-.make-show-md {
+.show-md {
   @media not all and (min-width: @md-min) and (max-width: @md-max) {
-    .make-hide;
+    .hide;
   }
 }
 
-.make-show-lg {
+.show-lg {
   @media not all and (min-width: @lg-min) and (max-width: @lg-max) {
-    .make-hide;
+    .hide;
   }
 }
 
-.make-show-xl {
+.show-xl {
   @media not all and (min-width: @xl-min) and (max-width: @xl-max) {
-    .make-hide;
+    .hide;
   }
 }
-
-//.loop-col (@i) when (@i > 0) {
-//  .col-@{i} {
-//    .make-col(@i);
-//  }
-//
-//  .col-sm-@{i} {
-//    .make-col-sm(@i);
-//  }
-//
-//  .col-md-@{i} {
-//    .make-col-md(@i);
-//  }
-//
-//  .col-lg-@{i} {
-//    .make-col-lg(@i);
-//  }
-//
-//  .loop-col(@i - 1);
-//}
-//
-//.loop-col(12);
